--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ None=======
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.ComboStruct,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
-SceneComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
+SceneComponent=
 Landscape=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 Info=PropertyWrapper.DefaultValueCategory.ComboStruct,
@@ -187,7 +187,7 @@ BP_PROP_fence_gate_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMesh
 PlatformWood_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
 BillboardComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 PlatformWoodLnR_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
-PlatformBrickLnR_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
+PlatformBrickLnR_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,
 WheelTrap_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 RotatingMovementComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,
 Wheel_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
@@ -343,7 +343,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" \"Object.SkeletalMeshes\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Painting.VertexColorMaskByChannel\" "
 None=======
 None=======
 None=======
@@ -2184,7 +2184,7 @@ CleanShutdown=True
 ScreenPosition=X=853.000 Y=161.000
 ScreenPosition=X=134.400 Y=30.400
 WindowSize=X=1701.000 Y=720.000
-WindowSize=X=1298.400 Y=738.400
+WindowSize=X=1304.800 Y=744.800
 InitiallyMaximized=False
 InitiallyMaximized=True
 None=======
@@ -2216,7 +2216,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/DragonWord/InterfaceFunctions
-ContentBrowserTab1.SelectedPaths=/Game/Particles_Wind_Control_System/Materials
+ContentBrowserTab1.SelectedPaths=/Game/HandPaintedEnvironment/Assets/Models
 None=======
 None=======
 None=======
@@ -2289,7 +2289,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/DragonWord/Materials
-ContentBrowserDrawer.SelectedPaths=/Game/Particles_Wind_Control_System/Meshes
+ContentBrowserDrawer.SelectedPaths=/Game/HandPaintedEnvironment/Assets/Models
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3381,8 +3381,8 @@ MRUItem18=/Game/DragonWord/BPObjects/PlatformSwitch
 MRUItem19=/Game/DragonWord/BPObjects/Letters3
 
 [LandscapeEdit]
-PaintToolStrength=0.370400012
-PaintBrushRadius=381.236786
+PaintToolStrength=0.184799999
+PaintBrushRadius=267.597321
 PaintBrushFalloff=0.5
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
@@ -3400,7 +3400,7 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
-BrushRadius=346.36554
+BrushRadius=643.147705
 ToolStrength=0.223199993
 BrushFalloff=1
 
@@ -3647,26 +3647,26 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 bHideUnrelatedNodes=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Particles_Wind_Control_System/Meshes/SM_Leaf.SM_Leaf;
-RecentlyPlaced=/Game/DragonWord/BPObjects/WheelTrap.WheelTrap;
-RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/deco/SM_PROP_mailbox.SM_PROP_mailbox;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Grape.SM_Grape;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Fence.SM_Fence;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Cucumber_A.SM_Cucumber_A;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Cucumber_C_Harvested.SM_Cucumber_C_Harvested;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Cucumber_B_Harvested.SM_Cucumber_B_Harvested;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Cucumber_B.SM_Cucumber_B;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Cucumber_A_Harvested.SM_Cucumber_A_Harvested;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Berries_B_Harvested.SM_Berries_B_Harvested;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Berries_B.SM_Berries_B;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Berries_Starter.SM_Berries_Starter;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Berries_C_Harvested.SM_Berries_C_Harvested;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Berries_A_Harvested.SM_Berries_A_Harvested;
-RecentlyPlaced=/Game/UltimateFarming/Meshes/SM_Berries_C.SM_Berries_C;
-RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Box_2.Box_2;
-RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/street_light.street_light;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Tower.Tower;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Log_2.Log_2;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Log.Log;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Log_1.Log_1;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Chest.Chest;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Arch.Arch;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Arch_part.Arch_part;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Altar.Altar;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Cauldron.Cauldron;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Witch_house.Witch_house;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Well.Well;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Wall_1.Wall_1;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Wall_2.Wall_2;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Tile_4.Tile_4;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Tile_7.Tile_7;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Tile_6.Tile_6;
 RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Stone_fence.Stone_fence;
 RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Pillar_ruined_2.Pillar_ruined_2;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Mine.Mine;
+RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Pillar.Pillar;
 None=======
 GameplayTagsSettings=True
 
@@ -3861,9 +3861,9 @@ IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
 None=======
-Radius=703.631836
+Radius=122.458008
 bFilterStaticMesh=False
-PaintDensity=0.119999997
+PaintDensity=0.0399999991
 UnpaintDensity=0.00800000038
 
 [WidgetTemplatesExpanded]
