--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -193,7 +193,7 @@ RotatingMovementComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,
 Wheel_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 Wheel2_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
-Bridge_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,
+Bridge_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 FinalGateLV1_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.lettersCollected,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
 Letter_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,
 SphereComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,
@@ -343,7 +343,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" \"Object.SkeletalMeshes\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.Painting.VertexColorMaskByChannel\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -2184,7 +2184,7 @@ CleanShutdown=True
 ScreenPosition=X=853.000 Y=161.000
 ScreenPosition=X=134.400 Y=30.400
 WindowSize=X=1701.000 Y=720.000
-WindowSize=X=1304.800 Y=744.800
+WindowSize=X=1306.400 Y=746.400
 InitiallyMaximized=False
 InitiallyMaximized=True
 None=======
@@ -2216,7 +2216,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/DragonWord/InterfaceFunctions
-ContentBrowserTab1.SelectedPaths=/Game/HandPaintedEnvironment/Assets/Models
+ContentBrowserTab1.SelectedPaths=/Game/AncientTreasures/Meshes
 None=======
 None=======
 None=======
@@ -2289,7 +2289,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/DragonWord/Materials
-ContentBrowserDrawer.SelectedPaths=/Game/HandPaintedEnvironment/Assets/Models
+ContentBrowserDrawer.SelectedPaths=/Game/AncientTreasures/Meshes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3647,6 +3647,12 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_Coin_Pile_01a.SM_Coin_Pile_01a;
+RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_Coin_Pile_01h.SM_Coin_Pile_01h;
+RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_Coin_Pile_01g.SM_Coin_Pile_01g;
+RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_Coin_Pile_01d.SM_Coin_Pile_01d;
+RecentlyPlaced=/Game/DragonWord/BPObjects/Word.Word;
+RecentlyPlaced=/Game/DragonWord/BPObjects/Bridge.Bridge;
 RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Tower.Tower;
 RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Log_2.Log_2;
 RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Log.Log;
@@ -3661,12 +3667,6 @@ RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Well.Well;
 RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Wall_1.Wall_1;
 RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Wall_2.Wall_2;
 RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Tile_4.Tile_4;
-RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Tile_7.Tile_7;
-RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Tile_6.Tile_6;
-RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Stone_fence.Stone_fence;
-RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Pillar_ruined_2.Pillar_ruined_2;
-RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Mine.Mine;
-RecentlyPlaced=/Game/HandPaintedEnvironment/Assets/Models/Pillar.Pillar;
 None=======
 GameplayTagsSettings=True
 
@@ -3861,9 +3861,9 @@ IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
 None=======
-Radius=122.458008
+Radius=524.925293
 bFilterStaticMesh=False
-PaintDensity=0.0399999991
+PaintDensity=0.104000002
 UnpaintDensity=0.00800000038
 
 [WidgetTemplatesExpanded]
