--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ None=======
 SkeletalMeshComponent=
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.ComboStruct,
 CapsuleComponent=
-SceneComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,BP_EnemyBase_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,PropertyWrapper.DefaultValueCategory.Attack Anim,SkeletalMeshComponent.Collision.Collision,EdGraph.Inputs.44DD37C343AF39EDBBE7A0B7C1BB41A0,EdGraph.Inputs.A536FF48462B8A211C924081323ED53A,EdGraph.Inputs.CC9162934B455CAEF895D299C06A44FB,EdGraph.Inputs.CECA990B43A1E58E4C6A9195EC3551B2,EdGraph.Inputs.2CA78E2844A58D396177288BE566FD0C,EdGraph.Inputs.90CF258D47B9A290F566A183B333C6A9,EdGraph.Inputs.E81EA00F42F28D1955EC3DA028D87A21,
+SceneComponent=
 Landscape=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,BP_EnemyBase_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,PropertyWrapper.DefaultValueCategory.Attack Anim,SkeletalMeshComponent.Collision.Collision,EdGraph.Inputs.44DD37C343AF39EDBBE7A0B7C1BB41A0,EdGraph.Inputs.A536FF48462B8A211C924081323ED53A,EdGraph.Inputs.CC9162934B455CAEF895D299C06A44FB,EdGraph.Inputs.CECA990B43A1E58E4C6A9195EC3551B2,EdGraph.Inputs.2CA78E2844A58D396177288BE566FD0C,EdGraph.Inputs.90CF258D47B9A290F566A183B333C6A9,EdGraph.Inputs.E81EA00F42F28D1955EC3DA028D87A21,
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,
 Info=PropertyWrapper.DefaultValueCategory.ComboStruct,
@@ -496,8 +496,8 @@ SkyAtmosphereComponent="\"Object\" "
 VolumetricCloudComponent="\"Object\" "
 ExponentialHeightFogComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 PlayerMappableInputConfig="\"Object\" \"Object.Input.Input|PlayerMappable\" "
@@ -3064,9 +3064,19 @@ L_StageMap_C.Physics=True
 L_StageMap_C.WorldPartition=True
 L_StageMap_C.Events=True
 BaseBtn_WB_C.Events=True
+BP_PlayerRespawnPos_C.Tick=True
+BP_PlayerRespawnPos_C.Replication=True
+BP_PlayerRespawnPos_C.Rendering=True
+BP_PlayerRespawnPos_C.Collision=True
+BP_PlayerRespawnPos_C.Actor=True
+BP_PlayerRespawnPos_C.Input=True
+BP_PlayerRespawnPos_C.HLOD=True
+BP_PlayerRespawnPos_C.Physics=True
+BP_PlayerRespawnPos_C.WorldPartition=True
+BP_PlayerRespawnPos_C.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=853.000 Y=161.000
@@ -3103,7 +3113,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.53827697
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/DragonWord/HUD
+ContentBrowserTab1.SelectedPaths=/Game/DragonWord/BPObjects
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4249,26 +4259,26 @@ MRUItem4=/Game/DragonWord/MAP/LevelTwo
 MRUItem5=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/DragonWord/MAP/SecondTestMap
-MRUItem1=/Game/DragonWord/Player/BP_WizardPlayer1
-MRUItem2=/Game/DragonWord/Player/BP_WizardPlayer
-MRUItem3=/Game/DragonWord/HUD/HUD_GamePlay
-MRUItem4=/Game/UI/Pause_WB
-MRUItem5=/Game/UI/MainMenu_WB
-MRUItem6=/Game/DragonWord/MAP/L_MainMenu
-MRUItem7=/Game/DragonWord/MAP/LevelOne
-MRUItem8=/Game/DragonWord/MAP/L_StageMap
-MRUItem9=/Game/DragonWord/MAP/LevelTwo
-MRUItem10=/Game/DragonWord/MAP/TestMap
-MRUItem11=/Game/UI/StageMap_WB
-MRUItem12=/Game/UI/Play_WB
-MRUItem13=/Game/DragonWord/BPObjects/PlayerRespawnPos
-MRUItem14=/Game/DragonWord/Player/Components/SYS_PlayerStat
-MRUItem15=/Game/DragonWord/Setting/GM_PlayMode
-MRUItem16=/Game/DragonWord/HUD/HUD_GameOver
-MRUItem17=/Game/DragonWord/Enemies/AI/Controller/AIController_Boss
-MRUItem18=/Game/DragonWord/Enemies/AI/Controller/AI_Enemy_Range
-MRUItem19=/Game/DragonWord/Enemies/AI/Controller/AI_Enemy_Minin
+MRUItem0=/Game/DragonWord/BPObjects/BP_PlayerRespawnPos
+MRUItem1=/Game/DragonWord/MAP/SecondTestMap
+MRUItem2=/Game/DragonWord/Player/BP_WizardPlayer1
+MRUItem3=/Game/DragonWord/Player/BP_WizardPlayer
+MRUItem4=/Game/DragonWord/HUD/HUD_GamePlay
+MRUItem5=/Game/UI/Pause_WB
+MRUItem6=/Game/UI/MainMenu_WB
+MRUItem7=/Game/DragonWord/MAP/L_MainMenu
+MRUItem8=/Game/DragonWord/MAP/LevelOne
+MRUItem9=/Game/DragonWord/MAP/L_StageMap
+MRUItem10=/Game/DragonWord/MAP/LevelTwo
+MRUItem11=/Game/DragonWord/MAP/TestMap
+MRUItem12=/Game/UI/StageMap_WB
+MRUItem13=/Game/UI/Play_WB
+MRUItem14=/Game/DragonWord/BPObjects/PlayerRespawnPos
+MRUItem15=/Game/DragonWord/Player/Components/SYS_PlayerStat
+MRUItem16=/Game/DragonWord/Setting/GM_PlayMode
+MRUItem17=/Game/DragonWord/HUD/HUD_GameOver
+MRUItem18=/Game/DragonWord/Enemies/AI/Controller/AIController_Boss
+MRUItem19=/Game/DragonWord/Enemies/AI/Controller/AI_Enemy_Range
 
 [LandscapeEdit]
 PaintToolStrength=0.268000007
@@ -4433,6 +4443,7 @@ InputSettings=True
 /Game/UI/Pause_WB.Pause_WB=0
 /Game/DragonWord/HUD/HUD_GameOver.HUD_GameOver=0
 /Game/DragonWord/HUD/HUD_GamePlay.HUD_GamePlay=0
+/Game/DragonWord/BPObjects/BP_PlayerRespawnPos.BP_PlayerRespawnPos=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
