--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/DragonWord/MAP/L_MainMenu.L_MainMenu
-EditorStartupMap=/Game/DragonWord/MAP/L_MainMenu.L_MainMenu
+GameDefaultMap=/Game/DragonWord/MAP/LevelOne.LevelOne
+EditorStartupMap=/Game/DragonWord/MAP/LevelOne.LevelOne
 GlobalDefaultGameMode=/Game/DragonWord/Setting/GM_PlayMode.GM_PlayMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
