--- a/Saved/Config/WindowsEditor/Engine.ini
+++ b/Saved/Config/WindowsEditor/Engine.ini
@@ -42,6 +42,7 @@ Paths=../../../Engine/Plugins/Editor/ModelingToolsEditorMode/Content
 Paths=../../../Engine/Plugins/Editor/SpeedTreeImporter/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
+Paths=../../../Engine/Plugins/TraceUtilities/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
