--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -3325,7 +3325,7 @@ LandscapeStreamingProxy.Input=True
 LandscapeStreamingProxy.Actor=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=853.000 Y=161.000
@@ -3362,7 +3362,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/HandPaintedEnvironment/Assets/Landscape/Foliage
+ContentBrowserTab1.SelectedPaths=/Game/UltimateFarming/Meshes
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3434,7 +3434,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/DragonWord/Materials
-ContentBrowserDrawer.SelectedPaths=/Game/HandPaintedEnvironment/Assets/Landscape/Foliage
+ContentBrowserDrawer.SelectedPaths=/Game/Fantastic_Village_Pack/meshes/props/natural
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -4509,8 +4509,8 @@ MRUItem5=/Game/DragonWord/MAP/L_StageMap
 MRUItem6=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/HandPaintedEnvironment/Assets/Landscape/Foliage/Grass_1
-MRUItem1=/Game/DragonWord/MAP/LevelThree
+MRUItem0=/Game/DragonWord/MAP/LevelThree
+MRUItem1=/Game/HandPaintedEnvironment/Assets/Landscape/Foliage/Grass_1
 MRUItem2=/Game/DragonWord/MAP/LevelTwo
 MRUItem3=/Game/DragonWord/MAP/LevelOne
 MRUItem4=/Game/DragonWord/MAP/SecondTestMap
@@ -5085,7 +5085,7 @@ IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
 None=======
-PaintDensity=0.0199999996
+PaintDensity=0.0439999998
 Radius=1045.2832
 
 [WidgetTemplatesExpanded]
