--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -369,7 +369,7 @@ PlayerController=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComp
 BTT_MoveTo_C=
 InstancedFoliageActor=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Claw Attack,PropertyWrapper.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.Attack Anim,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,PropertyWrapper.DefaultValueCategory.Bite Attack,PropertyWrapper.DefaultValueCategory.Range Attack,PropertyWrapper.DefaultValueCategory.Flying Attack,PropertyWrapper.DefaultValueCategory.VocabList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BP_EnemyBase_C.Collision.Collision,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SteInteraction,EdGraph.Inputs.44DD37C343AF39EDBBE7A0B7C1BB41A0,EdGraph.Inputs.A536FF48462B8A211C924081323ED53A,EdGraph.Inputs.CC9162934B455CAEF895D299C06A44FB,EdGraph.Inputs.CECA990B43A1E58E4C6A9195EC3551B2,EdGraph.Inputs.2CA78E2844A58D396177288BE566FD0C,EdGraph.Inputs.90CF258D47B9A290F566A183B333C6A9,EdGraph.Inputs.E81EA00F42F28D1955EC3DA028D87A21
 BP_Newsboard_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Claw Attack,PropertyWrapper.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.Attack Anim,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,PropertyWrapper.DefaultValueCategory.Bite Attack,PropertyWrapper.DefaultValueCategory.Range Attack,PropertyWrapper.DefaultValueCategory.Flying Attack,PropertyWrapper.DefaultValueCategory.VocabList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BP_EnemyBase_C.Collision.Collision,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SteInteraction,EdGraph.Inputs.44DD37C343AF39EDBBE7A0B7C1BB41A0,EdGraph.Inputs.A536FF48462B8A211C924081323ED53A,EdGraph.Inputs.CC9162934B455CAEF895D299C06A44FB,EdGraph.Inputs.CECA990B43A1E58E4C6A9195EC3551B2,EdGraph.Inputs.2CA78E2844A58D396177288BE566FD0C,EdGraph.Inputs.90CF258D47B9A290F566A183B333C6A9,EdGraph.Inputs.E81EA00F42F28D1955EC3DA028D87A21
-LevelOne_C=
+LevelOne_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Claw Attack,PropertyWrapper.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.Attack Anim,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,PropertyWrapper.DefaultValueCategory.Bite Attack,PropertyWrapper.DefaultValueCategory.Range Attack,PropertyWrapper.DefaultValueCategory.Flying Attack,PropertyWrapper.DefaultValueCategory.VocabList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BP_EnemyBase_C.Collision.Collision,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SteInteraction,EdGraph.Inputs.44DD37C343AF39EDBBE7A0B7C1BB41A0,EdGraph.Inputs.A536FF48462B8A211C924081323ED53A,EdGraph.Inputs.CC9162934B455CAEF895D299C06A44FB,EdGraph.Inputs.CECA990B43A1E58E4C6A9195EC3551B2,EdGraph.Inputs.2CA78E2844A58D396177288BE566FD0C,EdGraph.Inputs.90CF258D47B9A290F566A183B333C6A9,EdGraph.Inputs.E81EA00F42F28D1955EC3DA028D87A21
 WidgetComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.lettersCollected,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,BP_EnemyBase_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,PropertyWrapper.DefaultValueCategory.Attack Anim,SkeletalMeshComponent.Collision.Collision,EdGraph.Inputs.44DD37C343AF39EDBBE7A0B7C1BB41A0,EdGraph.Inputs.A536FF48462B8A211C924081323ED53A,EdGraph.Inputs.CC9162934B455CAEF895D299C06A44FB,EdGraph.Inputs.CECA990B43A1E58E4C6A9195EC3551B2,EdGraph.Inputs.2CA78E2844A58D396177288BE566FD0C,EdGraph.Inputs.90CF258D47B9A290F566A183B333C6A9,EdGraph.Inputs.E81EA00F42F28D1955EC3DA028D87A21,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Claw Attack,PropertyWrapper.DefaultValueCategory.Bite Attack,PropertyWrapper.DefaultValueCategory.Range Attack,PropertyWrapper.DefaultValueCategory.Flying Attack,PropertyWrapper.DefaultValueCategory.VocabList,
 BP_BossFireBall_C=PropertyWrapper.DefaultValueCategory.ComboStruct,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Alphabet,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.lettersCollected,K2Node_VariableSet.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,InputSettings.Bindings.ActionMappings.SteInteraction,InputSettings.Bindings.ActionMappings,BP_EnemyBase_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,PropertyWrapper.DefaultValueCategory.Attack Anim,SkeletalMeshComponent.Collision.Collision,EdGraph.Inputs.44DD37C343AF39EDBBE7A0B7C1BB41A0,EdGraph.Inputs.A536FF48462B8A211C924081323ED53A,EdGraph.Inputs.CC9162934B455CAEF895D299C06A44FB,EdGraph.Inputs.CECA990B43A1E58E4C6A9195EC3551B2,EdGraph.Inputs.2CA78E2844A58D396177288BE566FD0C,EdGraph.Inputs.90CF258D47B9A290F566A183B333C6A9,EdGraph.Inputs.E81EA00F42F28D1955EC3DA028D87A21,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Claw Attack,PropertyWrapper.DefaultValueCategory.Bite Attack,PropertyWrapper.DefaultValueCategory.Range Attack,PropertyWrapper.DefaultValueCategory.Flying Attack,PropertyWrapper.DefaultValueCategory.VocabList,
 WB_NotificationText_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Claw Attack,PropertyWrapper.DefaultValueCategory.Alphabet,PropertyWrapper.DefaultValueCategory.Attack Anim,PropertyWrapper.DefaultValueCategory.lettersCollected,PropertyWrapper.DefaultValueCategory.wordRequired,PropertyWrapper.DefaultValueCategory.playerLettersCollected,PropertyWrapper.DefaultValueCategory.Jump Attack Anim,PropertyWrapper.DefaultValueCategory.Bite Attack,PropertyWrapper.DefaultValueCategory.Range Attack,PropertyWrapper.DefaultValueCategory.Flying Attack,PropertyWrapper.DefaultValueCategory.VocabList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BP_EnemyBase_C.Collision.Collision,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Word,K2Node_VariableGet.DefaultValueCategory.Alphabet,K2Node_VariableSet.DefaultValueCategory.wordRequired,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SteInteraction,EdGraph.Inputs.44DD37C343AF39EDBBE7A0B7C1BB41A0,EdGraph.Inputs.A536FF48462B8A211C924081323ED53A,EdGraph.Inputs.CC9162934B455CAEF895D299C06A44FB,EdGraph.Inputs.CECA990B43A1E58E4C6A9195EC3551B2,EdGraph.Inputs.2CA78E2844A58D396177288BE566FD0C,EdGraph.Inputs.90CF258D47B9A290F566A183B333C6A9,EdGraph.Inputs.E81EA00F42F28D1955EC3DA028D87A21
@@ -598,7 +598,7 @@ UserWidget="\"Object\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
@@ -3419,13 +3419,15 @@ VerticalBox.Localization=True
 BoxComponent.PathTracing=True
 ParticleSystemComponent.PathTracing=True
 TextRenderComponent.PathTracing=True
+SkeletalMeshComponent.PathTracing=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/DragonWord/Player/BP_PlayerWizard.BP_PlayerWizard
+CleanShutdown=False
 OpenAssetsAtExit=/Game/DragonWord/Enemies/Enemy_Blueprint/Boss/BP_Enemy_Boss.BP_Enemy_Boss
-OpenAssetsAtExit=/Game/DragonWord/HUD/HUD_GamePlay.HUD_GamePlay
-OpenAssetsAtExit=/Game/DragonWord/BPObjects/BP_Newsboard.BP_Newsboard
+OpenAssetsAtExit=/Game/UI/Pause_WB.Pause_WB
+OpenAssetsAtExit=/Game/UI/MainMenu_WB.MainMenu_WB
+OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
+OpenAssetsAtExit=/Game/DragonWord/MAP/LevelOne.LevelOne:PersistentLevel.LevelOne
 
 [RootWindow]
 ScreenPosition=X=853.000 Y=161.000
@@ -3462,7 +3464,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/DragonWord/BPObjects
+ContentBrowserTab1.SelectedPaths=/Game/DragonWord/MAP
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4648,26 +4650,26 @@ MRUItem9=/Game/DragonWord/MAP/L_StageMap
 MRUItem10=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/DragonWord/BPObjects/Switch
-MRUItem1=/Game/DragonWord/BPObjects/Platform
-MRUItem2=/Game/DragonWord/HUD/WB_NotificationText
-MRUItem3=/Game/DragonWord/BPObjects/BP_Newsboard
-MRUItem4=/Game/DragonWord/HUD/HUD_GamePlay
-MRUItem5=/Game/DragonWord/Enemies/Enemy_Blueprint/Boss/BP_Enemy_Boss
-MRUItem6=/Game/DragonWord/Player/BP_PlayerWizard
-MRUItem7=/Game/UI/Instruction_WB
-MRUItem8=/Game/UI/StageMap_WB
-MRUItem9=/Game/UI/MainMenu_WB
-MRUItem10=/Game/UI/Highscore_WB
-MRUItem11=/Game/UI/VocabSetting_WB
-MRUItem12=/Game/UI/Win_WB
-MRUItem13=/Game/UI/Setting_WB
-MRUItem14=/Game/DragonWord/BPObjects/FinalGateLV1
-MRUItem15=/Game/DragonWord/InterfaceFunctions/OpenDoorWithLetters
-MRUItem16=/Game/DragonWord/MAP/LevelOne
-MRUItem17=/Game/DragonWord/MAP/TestLVOne
-MRUItem18=/Game/DragonWord/Projectiles_base/BP_BossFireBall
-MRUItem19=/Game/DragonWord/Projectiles_base/BP_FireBallProjrctiles
+MRUItem0=/Game/UI/Win_WB
+MRUItem1=/Game/UI/Instruction_WB
+MRUItem2=/Game/DragonWord/MAP/LevelOne
+MRUItem3=/Game/UI/Setting_WB
+MRUItem4=/Game/UI/StageMap_WB
+MRUItem5=/Game/UI/MainMenu_WB
+MRUItem6=/Game/UI/Pause_WB
+MRUItem7=/Game/UI/Lose_WB
+MRUItem8=/Game/DragonWord/Enemies/Enemy_Blueprint/Boss/BP_Enemy_Boss
+MRUItem9=/Game/DragonWord/Enemies/AI/BPI_Boss
+MRUItem10=/Game/DragonWord/Enemies/AI/BPI_Enemy
+MRUItem11=/Game/DragonWord/BPObjects/Switch
+MRUItem12=/Game/DragonWord/BPObjects/Platform
+MRUItem13=/Game/DragonWord/HUD/WB_NotificationText
+MRUItem14=/Game/DragonWord/BPObjects/BP_Newsboard
+MRUItem15=/Game/DragonWord/HUD/HUD_GamePlay
+MRUItem16=/Game/DragonWord/Player/BP_PlayerWizard
+MRUItem17=/Game/UI/Highscore_WB
+MRUItem18=/Game/UI/VocabSetting_WB
+MRUItem19=/Game/DragonWord/BPObjects/FinalGateLV1
 
 [LandscapeEdit]
 PaintToolStrength=0.268000007
@@ -4864,6 +4866,8 @@ InputSettings=True
 /Game/UI/Win_WB.Win_WB=1
 /Game/UI/Highscore_WB.Highscore_WB=1
 /Game/UI/Instruction_WB.Instruction_WB=1
+/Game/DragonWord/Enemies/AI/BPI_Boss.BPI_Boss=1
+/Game/UI/Lose_WB.Lose_WB=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -4953,7 +4957,7 @@ GraphEditorQuickJumps=()
 bEnableContextMenuTimeSlicing=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
