--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -3503,7 +3503,7 @@ Remove_Vocab_WB_C.Clipping=True
 Remove_Vocab_WB_C.Navigation=True
 K2Node_BreakStruct.PinOptions=True
 WB_VocListViewEntry_C.Default=True
-Texture2D.Interchange =True
+Texture2D.Interchange=True
 BackgroundBlur.Layout=True
 BackgroundBlur.Content=True
 BackgroundBlur.Appearance=True
@@ -3558,13 +3558,11 @@ EditableText.Localization=True
 EditableText.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/DragonWord/Component/STRUCT_GameData.STRUCT_GameData
+CleanShutdown=True
 OpenAssetsAtExit=/Game/DragonWord/Player/Components/SYS_PlayerStat.SYS_PlayerStat
-OpenAssetsAtExit=/Game/DragonWord/Component/BP_RankListviewDataEntry.BP_RankListviewDataEntry
+OpenAssetsAtExit=/Game/DragonWord/Component/DT_Rank.DT_Rank
 OpenAssetsAtExit=/Game/UI/Highscore_WB.Highscore_WB
 OpenAssetsAtExit=/Game/DragonWord/Component/DT_GameData.DT_GameData
-OpenAssetsAtExit=/Game/DragonWord/MAP/L_Ranking.L_Ranking:PersistentLevel.L_Ranking
 OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
 
 [RootWindow]
@@ -4791,18 +4789,18 @@ MRUItem10=/Game/DragonWord/MAP/L_StageMap
 MRUItem11=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/DragonWord/Component/DT_GameData
-MRUItem1=/Game/UI/StageMap_WB
-MRUItem2=/Game/DragonWord/Component/DT_Rank
-MRUItem3=/Game/DragonWord/Component/DT_Vocab
-MRUItem4=/Game/DragonWord/Component/STRUCT_GameData
-MRUItem5=/Game/DragonWord/Component/STRUCT_Item
+MRUItem0=/Game/DragonWord/Component/DT_Rank
+MRUItem1=/Game/DragonWord/MAP/L_Ranking
+MRUItem2=/Game/UI/StageMap_WB
+MRUItem3=/Game/DragonWord/Component/DT_GameData
+MRUItem4=/Game/UI/Highscore_WB
+MRUItem5=/Game/DragonWord/Component/BP_RankListviewDataEntry
 MRUItem6=/Game/DragonWord/Player/Components/SYS_PlayerStat
-MRUItem7=/Game/DragonWord/Component/BP_RankListviewDataEntry
-MRUItem8=/Game/UI/Win_WB
-MRUItem9=/Game/DragonWord/MAP/L_Ranking
-MRUItem10=/Game/DragonWord/MAP/L_VocRemove
-MRUItem11=/Game/UI/Highscore_WB
+MRUItem7=/Game/DragonWord/Component/STRUCT_GameData
+MRUItem8=/Game/DragonWord/Component/DT_Vocab
+MRUItem9=/Game/DragonWord/Component/STRUCT_Item
+MRUItem10=/Game/UI/Win_WB
+MRUItem11=/Game/DragonWord/MAP/L_VocRemove
 MRUItem12=/Game/DragonWord/Component/STRUCT_Rank
 MRUItem13=/Game/DragonWord/HUD/WB_RankListViewEntry
 MRUItem14=/Game/DragonWord/Component/BP_ListviewDataEntry
@@ -5005,7 +5003,7 @@ InputSettings=True
 /Game/DragonWord/BPObjects/BP_Newsboard.BP_Newsboard=0
 /Game/UI/VocabSetting_WB.VocabSetting_WB=0
 /Game/UI/Win_WB.Win_WB=0
-/Game/UI/Highscore_WB.Highscore_WB=1
+/Game/UI/Highscore_WB.Highscore_WB=0
 /Game/UI/Instruction_WB.Instruction_WB=1
 /Game/DragonWord/Enemies/AI/BPI_Boss.BPI_Boss=1
 /Game/UI/Lose_WB.Lose_WB=1
@@ -5021,8 +5019,10 @@ InputSettings=True
 /Game/DragonWord/Component/STRUCT_Rank.STRUCT_Rank=0
 /Game/DragonWord/Component/BP_VocListviewDataEntry.BP_VocListviewDataEntry=0
 /Game/DragonWord/HUD/WB_RankListViewEntry.WB_RankListViewEntry=0
-/Game/DragonWord/Component/DT_Rank.DT_Rank=1
+/Game/DragonWord/Component/DT_Rank.DT_Rank=0
 /Game/DragonWord/Component/DT_GameData.DT_GameData=0
+/Game/DragonWord/Component/STRUCT_GameData.STRUCT_GameData=1
+/Game/DragonWord/Component/BP_RankListviewDataEntry.BP_RankListviewDataEntry=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
