--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/DragonWord/MAP/LevelOne.LevelOne
 EditorStartupMap=/Game/DragonWord/MAP/LevelOne.LevelOne
 GlobalDefaultGameMode=/Game/DragonWord/Setting/GM_PlayMode.GM_PlayMode_C
+GameInstanceClass=/Game/DragonWord/Setting/BP_DataGameInstance.BP_DataGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
