--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/DragonWord/MAP/LevelOne.LevelOne
 EditorStartupMap=/Game/DragonWord/MAP/LevelOne.LevelOne
-GlobalDefaultGameMode=/Game/DragonWord/Setting/GM_PlayMode.GM_PlayMode_C
+GlobalDefaultGameMode=/Game/DragonWord/Setting/GM_GamePlayMode.GM_GamePlayMode_C
 GameInstanceClass=/Game/DragonWord/Setting/BP_DataGameInstance.BP_DataGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
